--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
@@ -41,16 +41,47 @@
 /* Mobile adjustments */
 @media (max-device-width: 1024px) and (pointer: coarse){
 
+  .resumeButton {
+
+    padding: 1.7rem 2.2rem;
+
+    border-left: 4.5px solid rgb(0, 104, 104);
+    border-bottom: 4.5px solid rgb(0, 104, 104);
+    border-top: 1.5px solid rgb(0, 104, 104);
+    border-right: 1.5px solid rgb(0, 104, 104);
+
+  }
+
+  .resumeButton:hover{
+
+    border-left: 4.5px solid rgb(29, 33, 95);
+    border-bottom: 4.5px solid rgb(29, 33, 95);
+    border-top: 1.5px solid rgb(29, 33, 95);
+    border-right: 1.5px solid rgb(29, 33, 95);
+
+  }
+
+}
+
+
+
+@media (max-device-width: 600px) and (pointer: coarse){
+
   .introText{
 
     width: 100%;
 
   }
 
-  .resumeButton {
+}
 
-    padding: 1.7rem 2.2rem;
+@media (max-width: 600px) and (pointer: fine){
+
+  .introText{
+
+    width: 100%;
 
   }
 
 }
+
