--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Contact.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Contact.css
@@ -57,4 +57,22 @@
 
     }
 
+    .contactBox{
+
+        border-left: 5px solid rgb(42, 82, 82);
+        border-bottom: 5px solid rgb(42, 82, 82);
+        border-top: 1.5px solid rgb(42, 82, 82);
+        border-right: 1.5px solid rgb(42, 82, 82);
+
+    }
+
+    .contactBox:hover{
+
+        border-left: 5px solid rgb(19, 72, 72);
+        border-bottom: 5px solid rgb(19, 72, 72);
+        border-top: 1.5px solid rgb(19, 72, 72);
+        border-right: 1.5px solid rgb(19, 72, 72);
+
+    }
+
 }
