--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -17,7 +17,7 @@ html {
 body{
 
   min-height: 100vh;
-  min-width: 20rem;
+  min-width: 25rem;
   display: flex;
   flex-direction: column;
 
@@ -473,6 +473,7 @@ p, button, a {
   body{
 
     padding: 4rem 2rem;
+    margin: 0;
     
   }
 
