--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
@@ -1,6 +1,5 @@
 .skillsContainer{
 
-  min-height: 20rem;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -18,6 +17,7 @@
 .skill{
 
   width: 15rem;
+  min-height: 13rem;
   text-align: center;
 
   padding: 3rem 4rem;
@@ -48,7 +48,6 @@
 
   .skillsContainer{
 
-    min-height: 40rem;
     padding: 4rem 2rem;
 
   }
@@ -56,7 +55,7 @@
   .skill{
 
     width: 17rem;
-
+    min-height: 15rem;
     padding: 4rem 3rem;
 
   }
@@ -69,6 +68,8 @@
 
   .skillsContainer{
 
+    flex-direction: column;
+
     padding: 3rem;
     gap: 2rem;
 
@@ -77,7 +78,7 @@
   .skill{
 
     width: 100%;
-
+    min-height: 0;
     padding: 4rem;
 
     transition: none;
@@ -100,6 +101,8 @@
 
   .skillsContainer{
 
+    flex-direction: column;
+
     padding: 3rem;
     gap: 2rem;
 
@@ -108,7 +111,7 @@
   .skill{
 
     width: 100%;
-
+    min-height: 0;
     padding: 4rem;
 
     transition: none;
