--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
@@ -14,10 +14,11 @@
 
 }
 
+
 .skill{
 
   width: 15rem;
-  min-height: 13rem;
+  min-height: 20vh;
   text-align: center;
 
   padding: 3rem 4rem;
@@ -55,7 +56,7 @@
   .skill{
 
     width: 17rem;
-    min-height: 15rem;
+    min-height: 15vh;
     padding: 4rem 3rem;
 
   }
